[project]
name = "django-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton G Neuhold Jr",email = "agneuhold@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)"
]

[tool.poetry]
packages = [{include = "django_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
